Fix spacing between line items

--- a/app/source.css
+++ b/app/source.css
@@ -17,6 +17,7 @@
 
 .change {
   display: flex;
+  margin-bottom: 5px;
   & > * + * {
     margin-left: 5px;
   }
